# roots

./: CMakeLists.txt  README.md
include/Roots/: Concepts.hpp  Debug.hpp  Environment.hpp  Error.hpp  Filesystem.hpp  Memory.hpp  Roots.hpp  String.hpp  Structures.hpp  _defines.hpp  bws_result.hpp
lib/: Environment.cpp  Filesystem.cpp  Memory.cpp  String.cpp
